💚 Fix: deploy.yml 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,9 @@ jobs:
           script: |
             cd /home/ubuntu/Skhuthon_0th_TEAM03_BE
             rm -rf .env
+            git stash
             git pull origin main
+            git stash pop || true
             echo "$ENV" > .env
             npm install
             npm run build
