--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,8 @@ jobs:
           script: |
             cd /home/ubuntu/Skhuthon_0th_TEAM03_BE
             rm -rf .env
-            git reset --hard
-            git config pull.rebase false
-            git pull origin main
+            git fetch origin
+            git reset --hard origin/main
             echo "$ENV" > .env
             npm install
             npm run build
